--- a/Page3.html
+++ b/Page3.html
@@ -7,6 +7,9 @@
         <title>Latitude vs. Windspeed</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>  
+
+        <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+
     </head>
     <br>
 
@@ -14,15 +17,15 @@
     <div class='container'>
         <div class='row'>
             <div class='col-md-12'>
-                <h1 style="color: blue">Latitude vs. Windspeed</h1>
+                <h1>Latitude vs. Windspeed</h1>
             </div>
         </div>
         <div class='row'>
             <div class='col-md-6'>
-                <img src="/Users/kellenquinn/Desktop/Web-Design-Challenge/Python-API-Challenge/Latitudevswindspeed.png" alt="Latitude v. Windspeed chart" ALIGN="left"/>
+                <img src="/Users/kellenquinn/Desktop/Web-Design-Challenge/Python-API-Challenge/Latitudevswindspeed.png" alt="Latitude v. Windspeed chart" ALIGN="right"/>
                 <br>
                 <h4>
-                    <p style="color: blue; line-height: 1.5"> For our analysis of humidity in relation to latitude, the chart on the left is analyzing 
+                    <p> For our analysis of humidity in relation to latitude, the chart on the left is analyzing 
                      average wind speed (mph) in relation to distance from the equator. From this chart it appears that average windspeed is likely 
                     going to be between 0 mph and 25 mph on a given day. Keeping in mind that there are several high altitude slip streams that 
                     go specific ways that aviation uses...the distribution here is not surprisning and you can see that some of the windspeeds 
