--- a/Page1.html
+++ b/Page1.html
@@ -8,6 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         
+        <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+
     </head>
     <br>
 
@@ -15,7 +17,7 @@
     <div class='container'>
         <div class='row'>
             <div class='col-md-12'>
-                <h1 style="color: blue">Latitude vs. Temperature</h1>
+                <h1>Latitude vs. Temperature</h1>
             </div> 
         </div>
         <div class='row'>
@@ -23,7 +25,7 @@
                 <img src="/Users/kellenquinn/Desktop/Web-Design-Challenge/Python-API-Challenge/LatitudevsTemperature.png" alt="Latitude v. Temp chart" ALIGN="right"/>
                 <br>
                 <h4>
-                    <p style="color: blue; line-height: 1.5"> For our analysis of temperature in relation to latitude, we looked at temperature 
+                    <p> For our analysis of temperature in relation to latitude, we looked at temperature 
                     in relation to distance from the equator in both the Northern and Southern hemispheres, and visualized the combined data for both 
                     hemispheres in the resulting chart to the left. It was discovered, as supported by well-known anecdotal knowledge, that the further
                     one travels from the equator; the cooler the temperature becomes. 
