--- a/Page2.html
+++ b/Page2.html
@@ -7,6 +7,9 @@
         <title>Latitude vs. Humidity</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+        
     </head>
     <br>
 
@@ -14,7 +17,7 @@
     <div class='container'>
         <div class='row'>
             <div class='col-md-12'>
-                <h1 style="color: blue">Latitude vs. Humidity</h1> 
+                <h1>Latitude vs. Humidity</h1> 
             </div>
         </div>
         <div class='row'>
@@ -22,7 +25,7 @@
                 <img src="/Users/kellenquinn/Desktop/Web-Design-Challenge/Python-API-Challenge/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="right"/>
                 <br>
                 <h4>
-                    <p style="color: blue; line-height: 1.5"> For our analysis of humidity in relation to latitude, we again looked at
+                    <p> For our analysis of humidity in relation to latitude, we again looked at
                     humidity overall in addition to humidity in relation to latitude in both the Northern and Southern hemispheres. As can be 
                     seen on the left, there is little to no relation to latitude and humidity. This is most likely due to the fact that humidity
                     is itself a measure of liquid in the air. It must be noted that the areas close to the equator are known for having higher levels
