--- a/Page4.html
+++ b/Page4.html
@@ -7,6 +7,8 @@
         <title>Latitude vs. cloudiness</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="assets/css/styles.css" media="screen">
         
     </head>
     <br>
@@ -15,7 +17,7 @@
     <div class='container'>
         <div class='row'>
             <div class='col-md-12'>
-                <h1 style="color: blue">Latitude vs. Cloudiness</h1>
+                <h1>Latitude vs. Cloudiness</h1>
             </div>
         </div>
         <div class='row'>
@@ -23,7 +25,7 @@
                 <img src="/Users/kellenquinn/Desktop/Web-Design-Challenge/Python-API-Challenge/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="right"/>
                 <br>
                 <h4>
-                    <p style="color: blue; line-height: 1.5"> As can be seen in the chart to the left, the analysis of the relationship between distance from the equator 
+                    <p> As can be seen in the chart to the left, the analysis of the relationship between distance from the equator 
                      and cloudiness shows that there is absolutely no correlation between the two Factors. While there appears to be little to no relation between the two; 
                     cloudiness data in concert with the humidity vs. latitude chart could be useful to guess likelihood of rainfall.
                     </p>
