--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Summary: Latitude vs. X</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+
 </head>
 <br>
 
@@ -45,7 +48,7 @@
     <div class='container'>
         <div class='row'>
             <div class='col-md-12'>
-                <h1 style="color: blue">Summary: Latitude vs. X</h1>
+                <h1>Summary: Latitude vs. X</h1>
             </div>
         </div>
         <div class='row'>
@@ -53,13 +56,13 @@
                 <img src="/Users/kellenquinn/Desktop/Web-Design-Challenge/Python-API-Challenge/LatitudevsTemperature.png" alt="Latitude v. Temp chart" ALIGN="right"/>
                 <br>
                 <h4>
-                    <p style="color: blue; line-height: 1.5", class = para>The purpose of this project was to analyze how weather changes in relation to distance from the equator.
+                    <p>The purpose of this project was to analyze how weather changes in relation to distance from the equator.
                     To accomplish this, we first pulled data from OpenWeatherMap API to create a dataset consisting of over 500 cities
                     from all over the world. 
                     </p>    
                 </h4>
                 <h4>
-                    <p style="color: blue; line-height: 1.5", class = para>After creating the dataset, we then used Matplotlib to plot various aspects of the weather and its relationship 
+                    <p>After creating the dataset, we then used Matplotlib to plot various aspects of the weather and its relationship 
                     (if any) to latitude. Factors that were considered included: temperature, cloudiness, wind speed, and humidity. 
                     This site provides source data and visualizations that were created as part of the analysis, in addition to explanations
                     and descriptions of identified trends.
@@ -68,16 +71,14 @@
             </div>
             <div class='col-md-6'>
                 <ul>
-                    <li><strong><a href>Placeholder1</a></strong></li>
-                    <li><strong><a href>Placeholder2</a></strong></li>
+                    <li><strong><a href="/Users/kellenquinn/Desktop/Web-Design-Challenge/Page1.html">Latitude vs. Temperature</a></strong></li>
+                    <li><strong><a href="Web-Design-Challenge/Page2.html">Latitude vs. Humidity</a></strong></li>
                     <li><strong><a href>Placeholder3</a></strong></li>
                     <li><strong><a href>Placeholder4</a></strong></li>
                 </ul>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
 </html>
