--- a/Page2.html
+++ b/Page2.html
@@ -13,7 +13,34 @@
     </head>
     <br>
 
-<body>    
+<body> 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="Comparison.html">Comparison</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="Data.html">Data</a>
+                </li>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Plots
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="Page1.html">Latitude vs. Temperature</a></li>
+                        <li><a class="dropdown-item" href="Page2.html">Latitude vs. Humidity</a></li>
+                        <li><a class="dropdown-item" href="Page3.html">Latitude vs. Windspeed</a></li>
+                        <li><a class="dropdown-item" href="Page4.html">Latitude vs. Cloudiness</a></li>
+                    </ul>
+                </li>
+                </ul>
+            </div>
+        </div>
+    </nav> 
     <div class='container'>
         <div class='row'>
             <div class='col-md-12'>
