--- a/index.html
+++ b/index.html
@@ -16,29 +16,25 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">fdsafdsafdsafdsa</a>
+            <a class="navbar-brand" href="Comparison.html">Comparison</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">fdsafdsafdsa</a>
+                    <a class="nav-link active" aria-current="page" href="Data.html">Data</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">fdsafdsafdsa</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">fdsafdsa</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown link
+                    Plots
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="Page1.html">Latitude vs. Temperature</a></li>
+                        <li><a class="dropdown-item" href="Page2.html">Latitude vs. Humidity</a></li>
+                        <li><a class="dropdown-item" href="Page3.html">Latitude vs. Windspeed</a></li>
+                        <li><a class="dropdown-item" href="Page4.html">Latitude vs. Cloudiness</a></li>
                     </ul>
                 </li>
                 </ul>
@@ -71,10 +67,10 @@
             </div>
             <div class='col-md-6'>
                 <ul>
-                    <li><strong><a href="/Users/kellenquinn/Desktop/Web-Design-Challenge/Page1.html">Latitude vs. Temperature</a></strong></li>
-                    <li><strong><a href="Web-Design-Challenge/Page2.html">Latitude vs. Humidity</a></strong></li>
-                    <li><strong><a href>Placeholder3</a></strong></li>
-                    <li><strong><a href>Placeholder4</a></strong></li>
+                    <li><strong><a href="Page1.html">Latitude vs. Temperature</a></strong></li>
+                    <li><strong><a href="Page2.html">Latitude vs. Humidity</a></strong></li>
+                    <li><strong><a href="Page3.html">Latitude vs. Windspeed</a></strong></li>
+                    <li><strong><a href="Page4.html">Latitude vs. Cloudiness</a></strong></li>
                 </ul>
             </div>
         </div>
