--- a/Page4.html
+++ b/Page4.html
@@ -49,7 +49,7 @@
         </div>
         <div class='row'>
             <div class='col-md-6'>
-                <img src="/Users/kellenquinn/Desktop/Web-Design-Challenge/Python-API-Challenge/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="right"/>
+                <img src="assets/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="right"/>
                 <br>
                 <h4>
                     <p> As can be seen in the chart to the left, the analysis of the relationship between distance from the equator 
@@ -58,6 +58,21 @@
                     </p>
                 </h4>
             </div>
+            <div class='col-md-3'>
+                <ul>
+                    <li><strong><a href="Page1.html">Latitude vs. Temperature</a></strong></li>
+                    <a href="Page1.html"><img src="assets/LatitudevsTemperature.png" alt="Latitude v. Temp chart" ALIGN="left"></a>
+                    <li><strong><a href="Page2.html">Latitude vs. Humidity</a></strong></li>
+                    <a href="Page2.html"><img src="assets/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="left"></a>
+                </ul>
+                 </div>
+                <div class='col-md-3'>
+                <ul>
+                    <li><strong><a href="Page3.html">Latitude vs. Windspeed</a></strong></li>
+                    <a href="Page3.html"><img src="assets/Latitudevswindspeed.png" alt="Latitude v. Windspeed chart" ALIGN="left"></a>
+                    <li><strong><a href="Page4.html">Latitude vs. Cloudiness</a></strong></li>
+                    <a href="Page4.html"><img src="assets/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="right"></a>
+                </ul>
         </div>
     </div>
 </body>
