--- a/Comparison.html
+++ b/Comparison.html
@@ -50,16 +50,34 @@
         </div>
     </div>
         <div class='row'>
-            <div class='col-md-3'></div>
+            <div class='col-md-6'>
                 <figure>
-                    <img src="/Users/kellenquinn/Desktop/Web-Design-Challenge/Python-API-Challenge/LatitudevsTemperature.png" alt="Latitude v. Temp chart" ALIGN="left"/>
-                    <figcaption>Latitude vs. Temperature</figcaption>
+                    <h2>Latitude vs. Temperature</h2>
+                    <br>
+                    <a href="Page1.html"><img src="assets/LatitudevsTemperature.png" alt="Latitude v. Temp chart" ALIGN="left"></a>
                 </figure>  
             </div>
-            <div class='col-md-3'></div> 
+            <div class='col-md-6'>
                 <figure>
-                    <img src="/Users/kellenquinn/Desktop/Web-Design-Challenge/Python-API-Challenge/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="right"/>
-                    <figcaption>Latitude vs. Humidity</figcaption>
+                    <h2>Latitude vs. Humidity</h2>
+                    <br>
+                    <a href="Page2.html"><img src="assets/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="right"></a>
+                </figure>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-6'>
+                <figure>
+                    <h2>Latitude vs. Windspeed</h2>
+                    <br>
+                    <a href="Page3.html"><img src="assets/Latitudevswindspeed.png" alt="Latitude v. Windspeed chart" ALIGN="left"></a>
+                </figure>  
+            </div>
+            <div class='col-md-6'>
+                <figure>
+                    <h2>Latitude vs. Cloudiness</h2>
+                    <br>
+                    <a href="Page4.html"><img src="assets/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="right"></a>
                 </figure>
             </div>
         </div>
