--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li><strong><a href="Page3.html">Latitude vs. Windspeed</a></strong></li>
                     <a href="Page3.html"><img src="assets/css/Latitudevswindspeed.png" alt="Latitude v. Windspeed chart" ALIGN="left"></a>
                     <li><strong><a href="Page4.html">Latitude vs. Cloudiness</a></strong></li>
-                    <a href="Page4.html"><img src="assets/css/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="right"></a>
+                    <a href="Page4.html"><img src="assets/css/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="left"></a>
                 </ul>
             </div>
         </div>
