--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                     </p>
                 </h4>
             </div>
+        </div>
+        <div class='row'>
             <div class='col-md-3'>
                 <ul>
                     <li><strong><a href="Page1.html">Latitude vs. Temperature</a></strong></li>
@@ -74,6 +76,8 @@
                     <a href="Page2.html"><img src="assets/css/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="left"></a>
                 </ul>
             </div>
+        </div>
+        <div class='row'>
             <div class='col-md-3'>
                 <ul>
                     <li><strong><a href="Page3.html">Latitude vs. Windspeed</a></strong></li>
