--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
                     <li><strong><a href="Page1.html">Latitude vs. Temperature</a></strong></li>
                     <a href="Page1.html"><img src="assets/css/LatitudevsTemperature.png" alt="Latitude v. Temp chart" ALIGN="left"></a>
                     <br>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-3'>
                     <li><strong><a href="Page2.html">Latitude vs. Humidity</a></strong></li>
                     <a href="Page2.html"><img src="assets/css/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="left"></a>
                 </ul>
@@ -83,6 +87,10 @@
                     <li><strong><a href="Page3.html">Latitude vs. Windspeed</a></strong></li>
                     <a href="Page3.html"><img src="assets/css/Latitudevswindspeed.png" alt="Latitude v. Windspeed chart" ALIGN="left"></a>
                     <br>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-3'>
                     <li><strong><a href="Page4.html">Latitude vs. Cloudiness</a></strong></li>
                     <a href="Page4.html"><img src="assets/css/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="left"></a>
                 </ul>
