--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                 </h4>
             </div>
         </div>
+    </div>
+    <div class='container'>
         <div class='row'>
             <div class='col-md-3'>
                 <ul>
