--- a/index.html
+++ b/index.html
@@ -65,31 +65,36 @@
                     </p>
                 </h4>
             </div>
+
+            <div class='col-md-6'>
+                <div class='container'>
+                    <div class='row'>
+                        <div class='col-md-6'>
+                            <strong><a href="Page1.html">Latitude vs. Temperature</a></strong>
+                            <a href="Page1.html"><img src="assets/css/LatitudevsTemperature.png" alt="Latitude v. Temp chart" ALIGN="left"></a>
+                        </div>
+                        <div class='col-md-6'>
+                            <strong><a href="Page2.html">Latitude vs. Humidity</a></strong>
+                            <a href="Page2.html"><img src="assets/css/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="left"></a>
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class='col-md-6'>
+                            <strong><a href="Page3.html">Latitude vs. Windspeed</a></strong>
+                            <a href="Page3.html"><img src="assets/css/Latitudevswindspeed.png" alt="Latitude v. Windspeed chart" ALIGN="left"></a>
+                        </div>
+                        <div class='col-md-6'>
+                            <strong><a href="Page4.html">Latitude vs. Cloudiness</a></strong>
+                            <a href="Page4.html"><img src="assets/css/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="left"></a> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
-    <div class='container'>
-        <div class='row'>
-            <div class='col-md-3'>
-                <ul>
-                    <li><strong><a href="Page1.html">Latitude vs. Temperature</a></strong></li>
-                    <a href="Page1.html"><img src="assets/css/LatitudevsTemperature.png" alt="Latitude v. Temp chart" ALIGN="left"></a>
-                    <li><strong><a href="Page2.html">Latitude vs. Humidity</a></strong></li>
-                    <a href="Page2.html"><img src="assets/css/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="left"></a>
-                </ul>
-            </div>
-        </div>
-        <div class='row'>
-            <div class='col-md-3'>
-                <ul>
-                    <li><strong><a href="Page3.html">Latitude vs. Windspeed</a></strong></li>
-                    <a href="Page3.html"><img src="assets/css/Latitudevswindspeed.png" alt="Latitude v. Windspeed chart" ALIGN="left"></a>
-                    <li><strong><a href="Page4.html">Latitude vs. Cloudiness</a></strong></li>
-                    <a href="Page4.html"><img src="assets/css/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="left"></a>
-                </ul>
-            </div>
-        </div>
-    </div>
+    
 </body>
 
 </html>
-
