--- a/Comparison.html
+++ b/Comparison.html
@@ -61,7 +61,7 @@
                 <figure>
                     <h2>Latitude vs. Humidity</h2>
                     <br>
-                    <a href="Page2.html"><img src="assets/css/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="right"></a>
+                    <a href="Page2.html"><img src="assets/css/Latitudevshumidity.png" alt="Latitude v. Humidity chart" ALIGN="left"></a>
                 </figure>
             </div>
         </div>
@@ -77,7 +77,7 @@
                 <figure>
                     <h2>Latitude vs. Cloudiness</h2>
                     <br>
-                    <a href="Page4.html"><img src="assets/css/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="right"></a>
+                    <a href="Page4.html"><img src="assets/css/Latitudevscloudiness.png" alt="Latitude v. Cloudiness chart" ALIGN="left"></a>
                 </figure>
             </div>
         </div>
